# rindexer

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MEMORY_OPTIMIZATIONS.md  Makefile  README.md  STRUCTURE.md  TODO.md  bundled.Dockerfile  cargo.toml  docker-compose.yml  funding.json  package-lock.json  release.sh  rustfmt.toml
cli/: Cargo.toml  Makefile  README.md  binary_build.sh  design.md  output-2.json
cli/src/: cli_interface.rs  console.rs  main.rs  rindexer_yaml.rs
cli/src/commands/: add.rs  codegen.rs  delete.rs  mod.rs  new.rs  phantom.rs  start.rs
core/: Cargo.toml  README.md  TODO.md  build.rs
core/proptest-regressions/blockclock/: deltas.txt
core/resources/blockclock/: 10.blockclock  137.blockclock  324.blockclock  42161.blockclock  534352.blockclock  56.blockclock  8453.blockclock
core/src/: abi.rs  adaptive_concurrency.rs  alloy_provider.rs  events.rs  health.rs  layer_extensions.rs  lib.rs  logger.rs  meterics.rs  notifications.rs  provider.rs  prune_detection.rs  start.rs  system_state.rs
core/src/api/: generate_operations.rs  generate_schema.rs  graphql.rs  mod.rs  playground.rs
core/src/blockclock/: deltas.rs  fetcher.rs  fixed.rs  mod.rs  runlencoder.rs
core/src/chat/: clients.rs  discord.rs  mod.rs  opsgenie.rs  pagerduty.rs  slack.rs  telegram.rs  template.rs  twilio.rs
core/src/database/: batch_operations.rs  generate.rs  mod.rs  postgres.rs  sql_type_wrapper.rs
core/src/event/: callback_registry.rs  conditions.rs  config.rs  contract_setup.rs  factory_event_filter_sync.rs  message.rs  mod.rs  rindexer_event_filter.rs
core/src/generator/: build.rs  context_bindings.rs  database_bindings.rs  docker.rs  event_callback_registry.rs  events_bindings.rs  mod.rs  networks_bindings.rs  trace_bindings.rs
core/src/helpers/: array.rs  duration.rs  evm_log.rs  file.rs  mod.rs  solidity.rs  thread.rs
core/src/hot_reload/: diff.rs  mod.rs  orchestrator.rs  watcher.rs
core/src/indexer/: cron_scheduler.rs  dependency.rs  fetch_logs.rs  heartbeat.rs  last_synced.rs  log_helpers.rs  mod.rs  native_transfer.rs  no_code.rs  predictable_timestamp.rs  process.rs  progress.rs  reorg.rs  start.rs  tables.rs  task_tracker.rs
core/src/manifest/: chat.rs  config.rs  contract.rs  core.rs  global.rs  graphql.rs  health.rs  mod.rs  native_transfer.rs  network.rs  phantom.rs  reth.rs  storage.rs  stream.rs  timestamps.rs  yaml.rs
core/src/metrics/: database.rs  definitions.rs  indexing.rs  mod.rs  rpc.rs  streams.rs  timer.rs
core/src/phantom/: common.rs  dyrpc.rs  mod.rs  overlay.rs  shadow.rs
core/src/provider/: notifications.rs
core/src/reth/: exex.rs  fetch_logs.rs  helpers.rs  mod.rs  node.rs  types.rs  utils.rs
core/src/simple_file_formatters/: csv.rs
core/src/streams/: clients.rs  cloudflare_queues.rs  kafka.rs  mod.rs  rabbitmq.rs  redis.rs  sns.rs  webhook.rs
core/src/types/: aws_config.rs  code.rs  core.rs  ethers.rs  mod.rs  single_or_array.rs
core/tests/: clickhouse_type_e2e.rs  e2e_dual_write.rs  e2e_finalized_delivery.rs  e2e_hist_to_live_dup.rs  e2e_parallel_fetch.rs  e2e_reorg.rs  e2e_reorg_streams.rs  postgres_bytea_array.rs  yaml_advanced_tables.rs
core/tests/fixtures/: advanced_tables.yaml  exchange_v1_minimal.json
documentation/: RFC.md  (+5 more)
e2e-tests/: .gitignore  Cargo.toml  Makefile  README.md
e2e-tests/abis/: ERC20.abi.json  MessageEmitter.abi.json  SimpleERC20.abi.json
e2e-tests/contracts/: MessageEmitter.sol  SimpleERC20.sol
e2e-tests/data/: rocketpooleth-transfer-small.csv  rocketpooleth-transfer.csv
e2e-tests/src/: anvil_setup.rs  docker.rs  health_client.rs  lib.rs  live_feeder.rs  main.rs  rindexer_client.rs  test_suite.rs
e2e-tests/src/tests/: basic_connection.rs  block_edge_cases.rs  config_validation.rs  contract_discovery.rs  demo_yaml.rs  direct_rpc.rs  dual_write_e2e.rs  graphql_queries.rs  graphql_start.rs  health_assertions.rs  helpers.rs  historic_indexing.rs  live_indexing.rs  mod.rs  multi_network.rs  native_transfer.rs  postgres_e2e.rs  registry.rs  reorg_e2e.rs  restart_checkpoint.rs  test_runner.rs  test_suite.rs
examples/clickhouse_factory_indexing/: .env.example  Cargo.toml  README.md  rindexer.yaml
examples/clickhouse_factory_indexing/src/: main.rs
examples/rindexer_factory_indexing/: Cargo.toml  README.md  rindexer.yaml
examples/rindexer_factory_indexing/src/: main.rs
rindexer_cli/: .env  Cargo.toml  Makefile  design.md  testing.yaml
rindexer_cli/src/: main.rs
rindexer_core/: Cargo.toml  README.md  build.rs
rindexer_core/external-examples/: manifest-example.yaml
rindexer_core/src/: lib.rs  logger.rs  provider.rs  start.rs
rindexer_core/src/api/: generate_operations.rs  generate_schema.rs  graphql.rs  mod.rs  playground.rs
rindexer_core/src/database/: mod.rs  postgres.rs
rindexer_core/src/generator/: build.rs  context_bindings.rs  docker.rs  event_bindings.rs  event_callback_registry.rs  events_bindings.rs  mod.rs  networks_bindings.rs
rindexer_core/src/helpers/: mod.rs  thread.rs
rindexer_core/src/indexer/: fetch_logs.rs  log_helpers.rs  mod.rs  no_code.rs  progress.rs  reorg.rs  start.rs
rindexer_core/src/manifest/: yaml.rs
rindexer_core/src/node/: get_logs.rs  mod.rs
rindexer_core/src/simple_file_formatters/: csv.rs
rindexer_core/src/types/: code.rs
rindexer_demo/: .env  Cargo.toml  docker-compose.yml  manifest-example.yaml  rindexer.yaml
rindexer_demo/abis/: lens-registry-events-abi.json
rindexer_demo/generated_csv/ERC20Filter/: erc20filter-transfer.csv
rindexer_demo/generated_csv/LensRegistry/: lensregistry-handlelinked.csv
rindexer_demo/generated_csv/RocketPoolETH/: rocketpooleth-approval.csv  rocketpooleth-transfer.csv
rindexer_demo/src/: main.rs  mod.rs
rindexer_demo/src/indexers/: mod.rs
rindexer_demo/src/rindexer/: mod.rs
rindexer_rust_playground/: Cargo.toml  docker-compose.yml  rindexer.yaml
rindexer_rust_playground/abis/: lens-hub-events-abi.json  playground-types-abi.json
rindexer_rust_playground/src/: main.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+440 files in other folders)
