[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "xtask",
    "examples/rindexer_rust_playground",
    "e2e-tests",
    "examples/rust_clickhouse",
    "examples/clickhouse_factory_indexing",
    "examples/rindexer_factory_indexing"
]

[workspace.dependencies]
alloy = { version = "^1.1.3", features = ["full"] }
alloy-chains = "0.2"
anyhow = "1"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
regex = "1.12"
reqwest = { version = "0.12.24", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tempfile = "3.27"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }