[package]
name = "rindexer_cli"
version = "0.25.3"
edition = "2021"
description = "A no-code or framework to build blazing fast EVM indexers - built in rust."
license = "MIT"
repository = "https://github.com/joshstevens19/rindexer"
readme = "README.md"
resolver = "2"

[dependencies]
# internal dependencies
rindexer = { path = "../core" }

# external dependencies
alloy = { version = "1.0.30", features = ["full"] }
alloy-chains = "0.2.8"# pegged to version in "foundry-block-explorers"
foundry-block-explorers = "0.17.0"
clap = { version = "4.5.46", features = ["derive"] }
regex = "1.11.2"
colored = "3.0.0"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"

# build
jemallocator = { version = "0.6.0", package = "tikv-jemallocator", optional = true }
jemalloc-ctl = { version = "0.6.0", package = "tikv-jemalloc-ctl", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
reth = ["rindexer/reth"]
