[package]
name = "rindexer_cli"
version = "0.27.0"
edition = "2021"
description = "A no-code or framework to build blazing fast EVM indexers - built in rust."
license = "MIT"
repository = "https://github.com/joshstevens19/rindexer"
readme = "README.md"
resolver = "2"

[dependencies]
# internal dependencies
rindexer = { path = "../core" }

# external dependencies
alloy = { version = "1.0.37", features = ["full"] }
alloy-chains = "0.2.14"# pegged to version in "foundry-block-explorers"
foundry-block-explorers = "0.17.0"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1.11.3"
colored = "3.0.0"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# build
jemallocator = { version = "0.6.0", package = "tikv-jemallocator", optional = true }
jemalloc-ctl = { version = "0.6.0", package = "tikv-jemalloc-ctl", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
reth = ["rindexer/reth"]
