[package]
name = "rindexer_cli"
version = "0.41.0"
edition = "2021"
description = "A no-code or framework to build blazing fast EVM indexers - built in rust."
license = "MIT"
repository = "https://github.com/joshstevens19/rindexer"
readme = "README.md"
resolver = "2"

[dependencies]
# internal dependencies
rindexer = { path = "../core" }

# external dependencies
alloy = { workspace = true }
alloy-chains = { workspace = true } # pegged to version in "foundry-block-explorers"
foundry-block-explorers = "0.22.0"
clap = { workspace = true }
regex = { workspace = true }
colored = "3.0.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }

# build
jemallocator = { version = "0.6.1", package = "tikv-jemallocator", optional = true }
jemalloc-ctl = { version = "0.6.1", package = "tikv-jemalloc-ctl", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
default = ["kafka"]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
reth = ["rindexer/reth"]
kafka = ["rindexer/kafka"]
