[package]
name = "rindexer"
version = "0.20.0"
edition = "2021"
description = "A no-code or framework to build blazing fast EVM indexers - built in rust."
license = "MIT"
repository = "https://github.com/joshstevens19/rindexer"
readme = "README.md"
resolver = "2"
build = "build.rs"

include = ["src/**", "resources/**", "Cargo.toml", "build.rs"]

[dev-dependencies]
tempfile = "3.3"
mockito = "1.7.0"

[dependencies]
# TODO: Trim down alloy features needed later, for now opt in to all.
alloy = { version = "1.0.9", features = ["full"] }
async-std = "1.12.0"
async-trait = "0.1.77"
aws-config = "1.5.0"
aws-sdk-sns = "1.37.0"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.22.0"
bytes = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
csv = "1.3.1"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-lapin = "0.12"
dotenv = "0.15.0"
futures = "0.3.30"
hex = "0.4.3"
lapin = "2.5.0"
lazy_static = "1.4.0"
native-tls = "0.2"
once_cell = "1.19.0"
postgres-native-tls = "0.5"
rand = "0.9.1"
# Redis version must match bb8-redis internal version. Can be removed in favor of just
# bb8-redis once https://github.com/djc/bb8/pull/183 is merged.
redis = { version = "0.30.0", features = ["streams"] }
regex = "1.10.4"
reqwest = { version = "0.12.15", features = ["json", "gzip"] }
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.30"
serenity = { version = "0.12", features = ["client", "framework"] }
teloxide = "0.15"
tempfile = "3.9.0"
thiserror = "2.0.12"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
mini-moka = "0.10.3"
url = "2.5.0"
eyre = { version = "0.6.10" }

# build
jemallocator = { version = "0.6.0", package = "tikv-jemallocator", optional = true }
jemalloc-ctl = { version = "0.6.0", package = "tikv-jemalloc-ctl", optional = true }
foundry-compilers = "0.17.0"
alloy-chains = "0.2.2"

# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1"}
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", features = ["serde"]}
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1"}
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1"}

[target.'cfg(not(windows))'.dependencies]
rdkafka = { version = "0.37.0", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.37.0", features = ["tokio", "cmake-build"] }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
