[package]
name = "rindexer"
version = "0.29.0"
edition = "2021"
description = "A no-code or framework to build blazing fast EVM indexers - built in rust."
license = "MIT"
repository = "https://github.com/joshstevens19/rindexer"
readme = "README.md"
resolver = "2"
build = "build.rs"

include = ["src/**", "resources/**", "Cargo.toml", "build.rs"]

[dev-dependencies]
tempfile = "3.23"
mockito = "1.7.0"

[dependencies]
# TODO: Trim down alloy features needed later, for now opt iun to all.
alloy = { version = "1.1.3", features = ["full", "json-rpc"] }
async-trait = "0.1.89"
aws-config = "1.8.8"
aws-sdk-sns = "1.88.0"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.24.0"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
csv = "1.4.0"
clickhouse = { version = "0.13.3", features = ["rustls-tls"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-lapin = "0.13"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
lapin = "3.7.1"
lazy_static = "1.5.0"
lru = "0.16.2"
native-tls = "0.2"
once_cell = "1.21.3"
postgres-native-tls = "0.5"
rand = "0.9.2"
# Redis version must match bb8-redis internal version. Can be removed in favor of just
# bb8-redis once https://github.com/djc/bb8/pull/183 is merged.
redis = { version = "0.32.7", features = ["streams"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "gzip"] }
rust_decimal = { version = "1.39.0", features = ["db-tokio-postgres"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
serenity = { version = "0.12", features = ["client", "framework"] }
teloxide = "0.17"
tempfile = "3.23.0"
thiserror = "2.0.17"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "time",
] }
mini-moka = "0.10.3"
url = "2.5.7"
uuid = "1"
eyre = { version = "0.6.12" }
cfg-if = "1.0.4"
zstd = "0.13.3"
bincode = "2.0.1"
anyhow = "1.0.100"
winnow = "0.7.13"
tower = "0.5.2"
port-killer = "0.1.0"
axum = "0.8"

# build
jemallocator = { version = "0.6.1", package = "tikv-jemallocator", optional = true }
jemalloc-ctl = { version = "0.6.1", package = "tikv-jemalloc-ctl", optional = true }
foundry-compilers = "0.19.5"
alloy-chains = "0.2.15"

# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", features = ["serde"], optional = true }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }

[target.'cfg(not(windows))'.dependencies]
rdkafka = { version = "0.38.0", features = ["tokio"], optional = true }

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"], optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
debug-json = []
kafka = ["dep:rdkafka"]
reth = [
    "dep:reth",
    "dep:reth-exex",
    "dep:reth-node-api",
    "dep:reth-node-ethereum",
    "dep:reth-tracing",
]
