[package]
name = "rindexer"
version = "0.40.0"
edition = "2021"
description = "A no-code or framework to build blazing fast EVM indexers - built in rust."
license = "MIT"
repository = "https://github.com/joshstevens19/rindexer"
readme = "README.md"
resolver = "2"
build = "build.rs"

include = ["src/**", "resources/**", "Cargo.toml", "build.rs"]

[dev-dependencies]
tempfile = { workspace = true }
mockito = "1.7.0"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "clickhouse", "redis", "rabbitmq", "kafka"] }
tokio-postgres = { workspace = true, features = ["with-serde_json-1"] }
rust_decimal = { version = "1.41", features = ["db-tokio-postgres"] }
tokio = { workspace = true, features = ["test-util"] }

[dependencies]
# TODO: Trim down alloy features needed later, for now opt iun to all.
alloy = { workspace = true, features = ["json-rpc", "eip712"] }
async-trait = "0.1.89"
aws-config = "1.8.8"
aws-sdk-sns = "1.88.0"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.24.0"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
croner = "2"
csv = { workspace = true }
clickhouse = { version = "0.13.3", features = ["rustls-tls"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-lapin = "0.13"
dotenv = "0.15.0"
futures = "0.3.31"
hex = { workspace = true }
lapin = "3.7.2"
lazy_static = "1.5.0"
lru = "0.16.2"
once_cell = "1.21.3"
rand = "0.9.2"
# Redis version must match bb8-redis internal version. Can be removed in favor of just
# bb8-redis once https://github.com/djc/bb8/pull/183 is merged.
redis = { version = "0.32.7", features = ["streams"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["gzip"] }
rust_decimal = { version = "1.41", features = ["db-tokio-postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serenity = { version = "0.12", features = ["client", "framework"] }
teloxide = "0.17"
tempfile = { workspace = true }
thiserror = { workspace = true }
thread_local = "1.1"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
notify = "8.2"
tokio-postgres = { workspace = true, features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
tokio-postgres-rustls = "0.13"
rustls = { workspace = true }
webpki-roots = "1"
rustls-native-certs = "0.8"
tokio-stream = "0.1.17"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time"] }
mini-moka = "0.10.3"
url = "2.5.7"
uuid = "1"
eyre = { version = "0.6.12" }
cfg-if = "1.0.4"
zstd = "0.13.3"
bincode = "2.0.1"
anyhow = { workspace = true }
winnow = "0.7.13"
tower = "0.5"
axum = "0.8"
prometheus = { version = "0.13", default-features = false }

# build
jemallocator = { version = "0.6.1", package = "tikv-jemallocator", optional = true }
jemalloc-ctl = { version = "0.6.1", package = "tikv-jemalloc-ctl", optional = true }
foundry-compilers = "0.19.5"
alloy-chains = { workspace = true }

# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", features = ["serde"], optional = true }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", optional = true }

[target.'cfg(not(windows))'.dependencies]
rdkafka = { version = "0.38.0", features = ["tokio", "ssl"], optional = true }

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build", "ssl"], optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
debug-json = []
kafka = ["dep:rdkafka"]
reth = [
    "dep:reth",
    "dep:reth-exex",
    "dep:reth-node-api",
    "dep:reth-node-ethereum",
    "dep:reth-tracing",
]
