[package]
name = "e2e-tests"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio-postgres = { workspace = true }
regex = { workspace = true }
dotenvy = "0.15"
csv = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
