[package]
name = "rindexer_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["rustls", "openssl"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features=["with-uuid-1"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.30"
lazy_static = "1.4.0"
regex = "1.10.4"
tokio-stream = "0.1.15"
thiserror = "1.0.56"