[package]
name = "rindexer_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["rustls", "openssl"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features=["with-uuid-1"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.30"
lazy_static = "1.4.0"
regex = "1.10.4"
tokio-stream = "0.1.15"
thiserror = "1.0.56"
futures = "0.3.30"
async-trait = "0.1.77"
csv = "1.1.0"
async-std = "1.12.0"
dotenv = "0.15.0"
url = "2.5.0"
bytes = "1.5.0"