[package]
name = "rindexer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls", "openssl"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features=["with-uuid-1"] }
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.30"
lazy_static = "1.4.0"
regex = "1.10.4"
tokio-stream = "0.1.15"
thiserror = "1.0.56"
futures = "0.3.30"
async-trait = "0.1.77"
csv = "1.1.0"
async-std = "1.12.0"
dotenv = "0.15.0"
url = "2.5.0"
bytes = "1.5.0"
crossterm = "0.27.0"
tui = "0.19.0"
rand = "0.8.5"
num-format = "0.4.4"
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"] }
tempfile = "3.9.0"
ctrlc = "3.4.4"
percent-encoding = "2.3.1"