[package]
name = "rindexer_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
rindexer_core = { path = "../rindexer_core" }

# external dependencies
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "openssl"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3.30"
async-trait = "0.1.77"
