[package]
name = "rindexer_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# internal dependencies
rindexer_core = { path = "../rindexer_core" }

# external dependencies
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "openssl"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
