[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
anyhow = { version = "1.0.100" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt"
] }
rindexer = { path = "../core" }

[features]
default = []
debug-json = []
