[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["env"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rindexer = { path = "../core" }

[features]
default = []
debug-json = []
