[package]
name = "clickhouse_factory_indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
# internal dependencies
rindexer = { path = "../../core" }

# external dependencies
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.1.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
